--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Test Contoh</title>
     </head>
-        <body>
-            <h2>Hello World 2!</h2>
-        </body>
+    <body>
+        <h2>Hello World Gusy!</h2>
+    </body>
 </html>
